--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <p>test</p>
-
+    <header class="header">
+      <button class="sign_in"> Sign Up</button>
+      <button class="log_in">Log In</button>
+    </header>
 
 
 
