small changes to html, (moblie friendly)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <header class="header">
-      <button class="sign_in"> Sign Up</button>
+      <button class="sign_in"> Sign In</button>
       <button class="log_in">Log In</button>
     </header>
 
